# girder_worker

./: .codecov.yml  .coveragerc.pytest  .flake8  .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  Dockerfile  Dockerfile.py3  HACKING.md  MANIFEST.in  NOTICE  README.md  README.rst  TRANSITION.md  __init__.py  docker-compose.yml  docker-entrypoint.sh  docker.env  plugin.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements2.txt  requirements3.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
analysis/: copy_table.json  fit_continuous.R  fit_continuous.json
cardoon/: __init__.py  __main__.py
clients/: client.py
cmake/: travis_continuous.cmake
core/: __init__.py  base.py  data.py  io.py  message.py  operators.py  pipeline.py  port.py  stream.py  task.py
devops/: docker-entrypoint.sh
docs/: api-docs.rst  builtin-plugins.rst  conf.py  developer-docs.rst  docker_run.rst  examples.rst  facebook-example.rst  getting-started.rst  image-example.rst  important-differences.rst  index.rst  installation.rst  plugins.rst  types-and-formats.rst  using-from-girder.rst
esgf/: __init__.py  search.py
examples/: example_client.py
gaia/: __init__.py
gaia/core/: base.py  (+7 more)
girder_worker/: __init__.py  __main__.py  app.py  celeryconfig.py  configure.py  describe.py  entrypoint.py  events.py  gwrun.py  log_utils.py  task.py  tasks.py  utils.py  worker.dist.cfg
pandas/: __init__.py  geopandas_data.py  geopandas_plot.py  geopandas_reader.py  geopandas_writer.py  pandas_data.py  xray_data.py
romanesco/: __init__.py  __main__.py  events.py  logger.py  spark.py  specs.py  utils.py  worker.dist.cfg
scripts/: galaxy_deploy.sh  install_requirements.py  package_analyses.py  test_analyses.py
server/: __init__.py  utils.py  validator.py
tests/: CMakeLists.txt  PythonTests.cmake  __init__.py  arbor_test.py  argument_types_test.py  base.py  config_test.py  conftest.py  debug_test.py  describe_test.py  directory_test.py  docker_test.py  docstring_test.py  esgf_search_test.py  factory_test.py  fetch_test.py  flake8.cfg  format_test.py  gaiaObject_test.py  geopandas_test.py  girder_worker.coveragerc.in  graph_test.py  image_test.py  integer_list_test.py  integer_test.py  io_test.py  message_test.py  number_list_test.py  number_test.py  packaging_test.sh  pep8.cfg  pickle_test.py  port_test.py  r_test.py  spark_test.py  spec_test.py  stream_output.py  stream_test.py  string_list_test.py  string_test.py  (+18 more)
(+718 files in other folders)
